--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -47,6 +47,7 @@
 
 <% @items.each do |item| %>
   <tr>
+    <% if item.is_paid == false %>
     <td><%= item.title %></td>
     <td><%= link_to (image_tag (item.photo.url(:small)), :action => 'show', :controller => 'items'), item %></td>
     <td><%= item.description %></td>
@@ -86,6 +87,7 @@
 
             <% end %>
         <% end %>
+      <% end %>
       </tr>
   <% end %>
 </table>
