--- a/peerserver/app/views/home/index.html.erb
+++ b/peerserver/app/views/home/index.html.erb
@@ -1,10 +1,9 @@
-<p align='right'><% if logged_in? %>
+<table width=100%><tr><td width=75%><h1>Peer Exchange</h1></td><td valign="top" align="right" width =75% ><% if logged_in? %>
 Welcome <%= current_application.username %>. <%= link_to "Log out", logout_path %>
 <% else %>
 <%= link_to "Sign up", signup_path %> or
 <%= link_to "Log in", login_path %>
-<% end %></p>
-<h1>Peer Exchange</h1>
+<% end %></td></tr></table>
 <%= link_to "Home", "/" %>
 <%= link_to "Category List", categories_path %>
 <% if logged_in? %>
