--- a/bootstrap_server/app/views/categories/index.html.erb
+++ b/bootstrap_server/app/views/categories/index.html.erb
@@ -1,25 +1,13 @@
-<h1>Listing categories</h1>
-
+<script type="text/javascript">
+function messageParent(url)
+{
+	window.parent.postMessage(url, '*');
+}
+</script>
 <table>
-  <tr>
-    <th>Name</th>
-    <th>Parent ID</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @categories.each do |category| %>
   <tr>
-    <td><%= category.name %></td>
-    <td><%= category.parentID %></td>
-    <td><%= link_to 'Show', category %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><a href='#' onclick="messageParent('<%= category.id %>')"><%= category.name %></a> </td>
   </tr>
 <% end %>
 </table>
-
-<br />
-
-<%= link_to 'New Category', new_category_path %>
