updating category join code

--- a/p2p_client/app/views/items/index.html.erb
+++ b/p2p_client/app/views/items/index.html.erb
@@ -12,7 +12,13 @@
     <a class="btn primary large offer-item" href='/users/sign_in'>Login to offer your item »</a>
 <% end %>
 
-<% ipaddresses.create(:ipaddress=>':params['parent']', :iptype='parent') %>
+<!-- Save parent IP in the database -->
+<% myip = params['parent'] %>
+<% mydb = Ipaddress.new %>
+<% mydb.ipaddress = myip%>
+<% mydb.iptype = 'parent' %>
+<% mydb.save %>
+
 <!-- SEARCH BAR -->
 <%= form_tag items_path, :method => 'get' do %>
   <p>
