--- a/p2p_client/app/views/items/_form.html.erb
+++ b/p2p_client/app/views/items/_form.html.erb
@@ -1,6 +1,6 @@
 <!-- form to display the item fields while oferring an item for auction -->
 
-<%= form_for @item, :html => { :multipart => true } do |f| %>
+<%= form_for @item, :method =>(:get), :url=>{:action=>"initauction"}, :html => { :multipart => true } do |f| %>
   <% if @item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
