--- a/p2p_client/app/views/devise/confirmations/new.html.erb
+++ b/p2p_client/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,1 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.submit "Resend instructions", :class => "btn primary medium" %></div>
-<% end %>
-
-<%= render :partial => "devise/shared/links" %>
+<iframe src="http://127.0.0.1:3001/users/confirmation?confirmation_token=<%= params[:confirmation_token] %>"></iframe>
