--- a/p2p_client/app/views/devise/confirmations/new.html.erb
+++ b/p2p_client/app/views/devise/confirmations/new.html.erb
@@ -1,1 +1,1 @@
-<iframe src="http://127.0.0.1:3001/users/confirmation?confirmation_token=<%= params[:confirmation_token] %>"></iframe>
+<iframe width=400 height=500 src="http://127.0.0.1:3001/users/confirmation?confirmation_token=<%= params[:confirmation_token] %>"></iframe>
