--- a/p2p_client/app/views/pages/home.html.erb
+++ b/p2p_client/app/views/pages/home.html.erb
@@ -116,6 +116,9 @@ var data = [
           <a class="btn primary large" href='<%= items_path %>'>Hot Items »</a>
         </div>
 <% end %>
+
+<% cookies.delete :CURRCATEGORY %>
+ Cookie is <%= cookies[:CURRCATEGORY] %>
 </div>
 
 
