--- a/p2p_client/app/views/layouts/_header.html.erb
+++ b/p2p_client/app/views/layouts/_header.html.erb
@@ -5,8 +5,12 @@
   <a class="brand" href="/">PeerBidz!</a>
   <ul class="nav">
     <li class="active"><%= link_to "Home", root_path %></li>
-    <% if user_signed_in? %>
+    <% require 'xmlrpc/client' %>
+    <%  server = XMLRPC::Client.new2("http://127.0.0.1:3001/api/xmlrpc") %>
+    <% if server.call("User.is_logged_in?") %>
+     <%# if cookies['_BestBay_session'] %>
             <li class="active"><%= link_to "My PeerBidz", myaccount_path %></li>
+            <li class="active"><%= link_to "Auction an Item", "/items/new" %></li>
     <% end %>
     <%= render 'devise/menu/registration_items' %>
     <%= render 'devise/menu/login_items' %>
