--- a/p2p_client/app/views/items/_form.html.erb
+++ b/p2p_client/app/views/items/_form.html.erb
@@ -32,7 +32,7 @@
     <%= f.text_field :starting_price %>
   </div>
   <div class="field">
-    <%= f.label :cname %><br />
+    <%= f.label "Category" %><br />
     <%= f.text_field :cname %>
   </div>
 
