fixing new item page

--- a/p2p_client/app/views/items/_form.html.erb
+++ b/p2p_client/app/views/items/_form.html.erb
@@ -33,7 +33,7 @@
   </div>
   <div class="field">
     <%= f.label "Category" %><br />
-    <%= f.text_field :cname %>
+    <%= f.text_field :category %>
   </div>
 
     <!-- div class="field">
