--- a/p2p_client/app/views/layouts/application.html.erb
+++ b/p2p_client/app/views/layouts/application.html.erb
@@ -26,14 +26,18 @@
 
 </head>
 <body>
+<iframe width=0 height =0 src="127.0.0.1:3001/isLoggedIn"></iframe>
 <script type="text/javascript" src="/javascripts/storageAPI.js"></script>
 <script type="text/javascript">
 var src = 'http://127.0.0.1:3000/categories#' + encodeURIComponent(document.location.href);
-
+function askLogIn()
+{
+	
+}
 function listener(event)
 {
 	var arr = event.data.split(" ");
-	this.document.location.href = "http://127.0.0.1:3000/items?browse=" + arr[0] +"&parent=" + arr[1];
+		this.document.location.href = "http://127.0.0.1:3000/items?browse=" + arr[0] +"&parent=" + arr[1];
 }
 
 if(window.addEventListener){
