--- a/bootstrap_server/app/views/pages/home.html.erb
+++ b/bootstrap_server/app/views/pages/home.html.erb
@@ -10,6 +10,7 @@
 <!-- Lively Homepage images-->
 
 <% if user_signed_in? %>
+    <% cookies[:email] = current_user.email %>
     <% if current_user.is_seller? %>
         <p class="welcome-text">Offer Items and Mint Money in Minutes !! </p>
     <% else %>
