--- a/bootstrap_server/app/views/categories/index.html.erb
+++ b/bootstrap_server/app/views/categories/index.html.erb
@@ -9,7 +9,7 @@ function messageParent(url, ip)
 <table>
 <% @categories.each do |category| %>
   <tr>
-    <td><a href='#' onclick="messageParent('<%= category.name %>', '<% request.env['REMOTE_ADDR'] %>')"><%= category.name %></a> </td>
+    <td><a href='#' onclick="messageParent('<%= category.name %>', '*'><%= category.name %></a> </td>
   </tr>
 <% end %>
 </table>
