Crazy bug fix ====

--- a/bootstrap_server/app/views/categories/doCategory.html.erb
+++ b/bootstrap_server/app/views/categories/doCategory.html.erb
@@ -1,8 +1,8 @@
-<% if user_signed_in? %>
-	<% if current_user.is_seller? %>
+<%# if user_signed_in? %>
+	<%# if current_user.is_seller? %>
 		<% CategoryMembers.create(:ipAddress => request.env['REMOTE_ADDR'], :category => params[:url])%>
-	<%end%>
-<%end%>
+	<%#end%>
+<%#end%>
 
 <!-- pick IP addresses round robin style by oldest updated_at -->
 <% myvar = CategoryMembers.where("category = ?", params[:url]).order("updated_at asc").first; %>
