--- a/bootstrap_server/app/views/categories/index.html.erb
+++ b/bootstrap_server/app/views/categories/index.html.erb
@@ -3,13 +3,13 @@
 function messageParent(url, ip)
 {
 	this.document.location.href = "http://128.237.240.210:3001/redirect?url=" +url;
-	<!--window.parent.postMessage(url, '*');-->
+	<window.parent.postMessage(url, '*');>
 }
 </script>
 <table>
 <% @categories.each do |category| %>
   <tr>
-    <td><a href='#' onclick="messageParent('<%= category.name %>', '*'><%= category.name %></a> </td>
-  </tr>
+    <td><a href='#' onclick="messageParent('<%= category.name %>', '*'><%= category.name %>"</a></td>
+</tr>
 <% end %>
 </table>
