--- a/p2p_client/app/views/items/initauction.html.erb
+++ b/p2p_client/app/views/items/initauction.html.erb
@@ -1,2 +1,2 @@
 
-<iframe src="http://128.237.240.210:3001/redirect?url=<%= @item.category %>"></iframe>
+<iframe src="http://128.237.240.210:3001/redirect?url=<%= @item.category %>&isSeller=1"></iframe>
