--- a/p2p_client/app/views/items/initauction.html.erb
+++ b/p2p_client/app/views/items/initauction.html.erb
@@ -1,2 +1,4 @@
+<% myBoot = Sellerring.where("iptype= ?", "bootstrap").first %>
+<% bootIP = myBoot.ipaddress %>
 
-<iframe src="http://128.237.240.210:3001/redirect?url=<%= @item.category %>&isSeller=1"></iframe>
+<iframe src="http://<%= bootIP %>:3001/redirect?url=<%= @item.category %>&isSeller=1"></iframe>
