--- a/p2p_client/app/views/layouts/application.html.erb
+++ b/p2p_client/app/views/layouts/application.html.erb
@@ -65,7 +65,7 @@ function listener(event)
 	}
 	else if(isSeller == -1)
 	{
-		this.document.location.href = "/users/login";
+		this.document.location.href = "/users/sign_in";
 	}
 	else
 	{
