--- a/bootstrap_server/app/views/categories/index.html.erb
+++ b/bootstrap_server/app/views/categories/index.html.erb
@@ -1,8 +1,8 @@
-<% my_address = IPSocket.getaddress(Socket.gethostname) %>
+<% my_address = UDPSocket.open {|s| s.connect('65.59.196.211', 1); s.addr.last }%>
 <script>
 	function messageParent(url)
 	{
-		this.document.location.href = "http://<%= my_address %>:3001/redirect?url=" +url;
+			this.document.location.href = "http://<%=my_address%>:3001/redirect?url=" +url;
 	}
 </script>
 <table>
