--- a/bootstrap_server/app/views/categories/doCategory.html.erb
+++ b/bootstrap_server/app/views/categories/doCategory.html.erb
@@ -1,18 +1,17 @@
-<% isPresent = CategoryMembers.where("category = ? and ipaddress = ?", params[:url], request.env['REMOTE_ADDR']) %>
-<% if isPresent == nil %>
+<% isPresent = CategoryMembers.where("category = ? and ipaddress = ?", params[:url], request.env['REMOTE_ADDR']).count  %>
+<% if isPresent == 0 %>
 	<% CategoryMembers.create(:ipAddress => request.env['REMOTE_ADDR'], :category => params[:url])%>
 <%end%>
 
 <!-- pick IP addresses round robin style by oldest updated_at -->
-<% db = CategoryMembers.where("category = ? and ipaddress <> ?", params[:url], request.env['REMOTE_ADDR']).order("updated_at asc") %>
+<% db = CategoryMembers.where("category = ? and ipaddress <> ?", params[:url], request.env['REMOTE_ADDR']).count %>
 <% myvar = CategoryMembers.new %>
-<% if db != nil %>
+<% if db != 0 %>
 	<% myvar = CategoryMembers.where("category = ? and ipaddress <> ?", params[:url], request.env['REMOTE_ADDR']).order("updated_at asc").first %>
 	<% myvar.updated_at = DateTime.now  %>
 	<% myvar.save %>
 <% else %>
-
-	<% myvar.ipadress = "0" %>	
+	<% myvar.ipAddress = "0" %>	
 <% end %>
 
 
