--- a/bootstrap_server/app/views/categories/doCategory.html.erb
+++ b/bootstrap_server/app/views/categories/doCategory.html.erb
@@ -1,7 +1,9 @@
 <% isPresent = CategoryMembers.where("category = ? and ipaddress = ?", params[:url], request.env['REMOTE_ADDR']).count  %>
+<% myvar = CategoryMembers.new %>
+<% myvar.ipAddress = "0" %>
+
 <% if isPresent == 0 %>
 	<% CategoryMembers.create(:ipAddress => request.env['REMOTE_ADDR'], :category => params[:url])%>
-<%end%>
 
 <!-- pick IP addresses round robin style by oldest updated_at -->
 <% db = CategoryMembers.where("category = ? and ipaddress <> ?", params[:url], request.env['REMOTE_ADDR']).count %>
@@ -10,10 +12,8 @@
 	<% myvar = CategoryMembers.where("category = ? and ipaddress <> ?", params[:url], request.env['REMOTE_ADDR']).order("updated_at asc").first %>
 	<% myvar.updated_at = DateTime.now  %>
 	<% myvar.save %>
-<% else %>
-	<% myvar.ipAddress = "0" %>	
 <% end %>
-
+<%end%>
 
 
 <script type="text/javascript">
