--- a/bootstrap_server/app/views/pages/home.html.erb
+++ b/bootstrap_server/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 <% if user_signed_in? %>
 	<%=request.env['REMOTE_ADDR']%>
     <% @loggedInUser = XMLRPC::Client.new(request.env['REMOTE_ADDR'], "/api/xmlrpc", 3000) %>
-    <% @loggedInUser.call2_async("Container.setIdentity", current_user.is_seller, current_user.email )%>
+    <% @loggedInUser.call2_async("Container.getIdentity",current_user.is_seller ,current_user.email  )%>
     <% if current_user.is_seller? %>
         <p class="welcome-text">Offer Items and Mint Money in Minutes !! </p>
     <% else %>
