--- a/p2p_client/app/views/items/show.html.erb
+++ b/p2p_client/app/views/items/show.html.erb
@@ -31,10 +31,10 @@
 
 </tr>
 
-<%= form_tag do %>
+<%= form_tag(:method => "get")  do %>
 	<%= label_tag(:amount, "Bid Amount:") %>
 	<%= text_field_tag(:amount) %>
-	<%= hidden_field_tag(:item_id,  @iteminfo["id"] ) %> 	
+	<%#= hidden_field_tag(:item_id,  @iteminfo["id"] ) %> 	
 <%end%>
 
 </table>
