--- a/bootstrap_server/app/views/categories/doCategory.html.erb
+++ b/bootstrap_server/app/views/categories/doCategory.html.erb
@@ -2,9 +2,11 @@
 <% myvar = CategoryMembers.new %>
 <% myvar.ipAddress = "0" %>
 
-<% if isPresent == 0 %>
-	<% CategoryMembers.create(:ipAddress => request.env['REMOTE_ADDR'], :category => params[:url])%>
 
+<% if isPresent == 0 %>
+<% if current_user.is_seller? %>
+	<% CategoryMembers.create(:ipAddress => request.env['REMOTE_ADDR'], :category => params[:url])%>
+<% end %>
 <!-- pick IP addresses round robin style by oldest updated_at -->
 <% db = CategoryMembers.where("category = ? and ipaddress <> ?", params[:url], request.env['REMOTE_ADDR']).count %>
 <% myvar = CategoryMembers.new %>
