--- a/p2p_client/app/views/items/index.html.erb
+++ b/p2p_client/app/views/items/index.html.erb
@@ -1,5 +1,4 @@
 <!-- This page display all the items present in the system -->
-<META HTTP-EQUIV=Refresh CONTENT="5; URL=http://localhost:3000/items?results=<%= cookies[:CURRCATEGORY] %>">
 <%require "xmlrpc/client"%>
 <% if user_signed_in? %>
     <% if current_user.is_seller? %>
@@ -26,29 +25,9 @@
 
   </p>
 <% end %>
-<h1> You are currently searching in the category : <%= cookies[:CURRCATEGORY] %> </h1>
-<% if @sellervalue != nil %>
-This is from the immediate seller <%= @sellervalue["value"] %>
-<%end%>
-
-<h2> Here are your search results </h2>
-<table>
-  <tr>
-    <th>Search String</th>
-    <th>Category</th>
-    <th>Seller Ip address</th>
-  </tr>
-<% @is_present = Searchresults.where("category = :ct", {:ct => cookies[:CURRCATEGORY]})%>
-<% @is_present.each do |item| %>
-
-  <tr>
-    <td><%= item.search_string %></td>
-    <td><%= item.category %></td>
-    <td><%= item.ipaddress %></td>
-  </tr>
-<%end%>
-</table>
-
+<h1>Category: <%= cookies[:CURRCATEGORY] %> </h1>
+<iframe width=100% height=500 src="/table?search=<%= params[:search] %>" >
+</iframe>
 <script>
     $(function() {
         var availableTags = [
