--- a/p2p_client/app/views/layouts/application.html.erb
+++ b/p2p_client/app/views/layouts/application.html.erb
@@ -91,12 +91,19 @@ else
 	attachEvent("onmessage", listener);
 }
 </script>
+<% else %>
 <div class="container-fluid">
+<% @mydata = Mydata.first %>
+<% if @mydata != nil %>
+	<% if @mydata.is_seller %>
+	<%else%>
 <div class="sidebar">
 <div id="iframe" class="well">
 <iframe  height=400 width=175 src="http://<%= bootIP %>:3001/categories" ></iframe>
 </div>
 </div>
+	<%end%>
+<%end%>
   <div class="content">
     <!-- Main hero unit for the home page -->
 
